メニューボタン変更

--- a/app/views/routes/walk.html.erb
+++ b/app/views/routes/walk.html.erb
@@ -1,8 +1,9 @@
 <%= render 'layouts/header' %>  
-<div class="cute-title flex items-center space-x-2 justify-center">
+<div class="cute-title flex flex-wrap items-center space-x-2 justify-center w-full">
   <input type="text" id="address" placeholder="住所や施設名を入力" class="w-1/2">
   <button id="searchBtn" class="btn_effect px-2 py-2 bg-white border-3 border-[#9A6812] rounded-md shadow-md font-bold">検索</button>
 </div>
+<%= render 'shared/route_menu', mode: :walk %>
 <div class="mt-15">
   <%= render 'shared/route_points', mode: :walk %>
   <div id="map"></div>
