--- a/app/views/shared/_route_points.html.erb
+++ b/app/views/shared/_route_points.html.erb
@@ -1,5 +1,5 @@
 
-<div class="point-selector flex flex-wrap items-center justify-center gap-2">
+<div class="point-selector flex flex-wrap items-center justify-center gap-2 w-full">
   <%# 'mode'ローカル変数に応じて表示を切り替える %>
   <% if defined?(mode) && mode == :walk %>
     <%= link_to car_routes_path do %>
