--- a/app/views/routes/car.html.erb
+++ b/app/views/routes/car.html.erb
@@ -1,8 +1,9 @@
-<%= render 'layouts/header' %>  
+<%= render 'layouts/header' %>
 <div class="cute-title flex items-center space-x-2 justify-center">
   <input type="text" id="address" placeholder="住所や施設名を入力" class="w-1/2">
   <button id="searchBtn" class="px-4 py-2 bg-white text-black border-3 border-[#9A6812] rounded-md shadow-md font-bold btn_effect">検索</button>
 </div>
+<%= render 'shared/route_menu', mode: :car %>
 <div class="mt-15">
   <%= render 'shared/route_points', mode: :car %>
   <div id="map"></div>
