--- a/app/views/shared/_route_menu.html.erb
+++ b/app/views/shared/_route_menu.html.erb
@@ -1,5 +1,5 @@
 <!-- padding: 内側余白、space-y-*: 子要素の間に縦方向(y軸)の間隔 -->
-<div class="flex flex-wrap justify-center space-y-1 mt-5 w-full">
+<div class="flex flex-wrap justify-center w-full">
   <!-- flex: 子要素が横並びになる、items-center: 上下中央寄せ、justify-between: 最初の要素は左端、最後の要素は右端に寄せられる -->
 
   <div class="flex items-center">
