--- a/app/views/shared/_route_points.html.erb
+++ b/app/views/shared/_route_points.html.erb
@@ -52,7 +52,7 @@
             <span class="font-bold text-[#624007]">中継点(着)</span>
           </div>
           <div class="flex flex-col gap-1">
-            <button class="remove-relay-point-btn text-red-500 text-xl btn_effect bg-white border-3 border-[#9A6812] rounded-md shadow-md font-bold w-6 h-6 flex items-center justify-center p-0">×</button>
+            <button class="remove-relay-point-btn text-red-500 text-xl btn_effect bg-white border-none rounded-md shadow-md font-bold w-6 h-6 flex items-center justify-center p-0">×</button>
             <% if local_assigns.fetch(:mode, nil) == :car %>
               <button class="search-nearby-parking-btn appearance-none bg-transparent border-none" data-point-type="relay">
                 <%= image_tag "/images/search_parking.png", alt: "search_parking", class: "btn_effect mt-2 h-13 w-13" %>
