--- a/app/views/save_routes/edit.html.erb
+++ b/app/views/save_routes/edit.html.erb
@@ -35,7 +35,7 @@
           <img src="/images/return_map.png" alt="return" class="h-10">
         <% end %>
 
-        <%= form.submit class: "nav-link" do %>
+        <%= form.button class: "nav-link" do %>
           <%= image_tag "/images/update.png", alt: "update", class: "h-10" %>
         <% end %>
       </div>
