--- a/app/views/save_routes/show.html.erb
+++ b/app/views/save_routes/show.html.erb
@@ -98,9 +98,15 @@
     ) do %>
       <%= image_tag "/images/startNavi.png", alt: "すぐ出発", class: "h-17" %>
     <% end %>
-    <%# 実行日と出発時刻が設定されている場合のみ通知設定ボタンを表示 %>
+
     <% if @save_route.execution_date.present? && @save_route.start_time.present? %>
-      <%= button_to 'メールで通知', save_route_notifications_path(@save_route), method: :post, class: "btn btn-info", form: { data: { turbo_confirm: "出発5分前にメールで通知を設定します。よろしいですか？" } } %>
+      <%= button_to save_route_notifications_path(@save_route), method: :post, form: { data: { turbo_confirm: "出発5分前にメールで通知を設定します。よろしいですか？" } }, class: "nav-link" do %>
+        <%= image_tag "/images/mail_notification.png", alt: "メール通知", class: "h-17" %>
+      <% end %>
+    <% else %>
+      <%= button_tag type: 'button', class: "nav-link", onclick: "alert('通知を設定するには、編集画面で実行日と出発時刻を設定してください。')" do %>
+        <%= image_tag "/images/mail_notification.png", alt: "メール通知", class: "h-17 opacity-50" %>
+      <% end %>
     <% end %>
   </div>
 </div>
