--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -19,15 +19,15 @@
 
   <div class="mt-6 flex items-center space-x-2">
     <%= link_to edit_location_path(@location), class: "nav-link" do %>
-      <img src="/images/edit.png" alt="edit" class="h-10">
+      <%= image_tag "/images/edit.png", alt: "edit", class: "h-17" %>
     <% end %>
 
     <%= button_to @location, method: :delete, form: { data: { turbo_confirm: '本当に削除しますか？', "barba-prevent": "all" } }, class: "nav-link" do %>
-      <%= image_tag "/images/delete.png", alt: "削除", class: "h-10" %>
+      <%= image_tag "/images/delete.png", alt: "削除", class: "h-17" %>
     <% end %>
 
     <%= link_to locations_path, class: "nav-link" do %>
-      <img src="/images/return_map.png" alt="return_map" class="h-10">
+      <%= image_tag "/images/return_map.png", alt: "return_map", class: "h-17" %>
     <% end %> 
   </div>
 </div>
