--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -2,8 +2,8 @@
 <div class="container cute-title mx-auto px-4 py-8">
   <div class="flex justify-between items-center mb-6">
     <h1 class="text-2xl font-bold">保存した場所一覧</h1>
-    <%= link_to save_routes_path, class: "nav-link" do %>
-      <img src="/images/return_map.png" alt="return_map" class="h-17">
+    <%= link_to new_route_path, class: "nav-link" do %>
+      <img src="/images/return_map.png" alt="return_map" class="btn_effect h-17">
     <% end %> 
   </div>
 
