--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -18,16 +18,16 @@
   </div>
 
   <div class="mt-6 flex items-center space-x-2">
+    <%= link_to locations_path, class: "nav-link" do %>
+      <%= image_tag "/images/return_before.png", alt: "return_map", class: "btn_effect h-17" %>
+    <% end %> 
+
     <%= link_to edit_location_path(@location), class: "nav-link" do %>
-      <%= image_tag "/images/edit.png", alt: "edit", class: "h-17" %>
+      <%= image_tag "/images/edit.png", alt: "edit", class: "btn_effect h-17" %>
     <% end %>
 
     <%= button_to @location, method: :delete, form: { data: { turbo_confirm: '本当に削除しますか？', "barba-prevent": "all" } }, class: "nav-link" do %>
-      <%= image_tag "/images/delete.png", alt: "削除", class: "h-17" %>
+      <%= image_tag "/images/delete.png", alt: "削除", class: "btn_effect h-17" %>
     <% end %>
-
-    <%= link_to locations_path, class: "nav-link" do %>
-      <%= image_tag "/images/return_map.png", alt: "return_map", class: "h-17" %>
-    <% end %> 
   </div>
 </div>
