--- a/app/views/save_routes/edit.html.erb
+++ b/app/views/save_routes/edit.html.erb
@@ -35,11 +35,11 @@
 
     <div class="flex justify-end mt-6 gap-2">
       <%= link_to save_route_path(@save_route), class: "nav-link" do %>
-        <img src="/images/return_map.png" alt="return" class="h-17">
+        <img src="/images/return_before.png" alt="return" class="btn_effect h-17">
       <% end %>
 
       <%= form.button class: "nav-link" do %>
-        <%= image_tag "/images/update.png", alt: "update", class: "h-17" %>
+        <%= image_tag "/images/update.png", alt: "update", class: "btn_effect h-17" %>
       <% end %>
     </div>
   <% end %>
