--- a/app/views/routes/car_navigation.html.erb
+++ b/app/views/routes/car_navigation.html.erb
@@ -1,5 +1,5 @@
 <%= link_to car_routes_path do %>
-  <%= image_tag "/images/stopNavi.png", alt: "stopNavi", class:"navi_btn" %>
+  <%= image_tag "/images/stopNavi.png", alt: "stopNavi", class:"btn_effect mt-2 mb-3" %>
 <% end %>
 <div id="arrivalMessageCar" class="fixed top-[10%] left-1/2 -translate-x-1/2 translate-y-1/2 z-50 hidden opacity-0 duration-1000 ease-in-out"> 
   <%= image_tag "/images/touchaku.png", alt:"arrival" %>
