--- a/app/views/shared/component/_login_info.html.erb
+++ b/app/views/shared/component/_login_info.html.erb
@@ -1,7 +1,7 @@
 <div class ="flex items-center mt-2 ml-2">
   <div class="flex items-center space-x-2">
     <div class="btn_effect">
-      <%= link_to root_path do %>
+      <%= link_to mypage_path do %>
         <%= image_tag "/images/sketto_man.png", alt: "load_top_sketto_man" %>
       <% end %>
     </div>
