プロフィール更新時にバリデエラー

--- a/app/views/save_routes/edit.html.erb
+++ b/app/views/save_routes/edit.html.erb
@@ -34,7 +34,7 @@
     </div>
 
     <div class="flex justify-end mt-6 gap-2">
-      <%= link_to save_route_path(@save_route), class: "nav-link" do %>
+      <%= link_to save_route_path(@save_route), class: "btn_effect" do %>
         <img src="/images/return_before.png" alt="return" class="btn_effect h-17">
       <% end %>
 
