--- a/app/views/mypages/edit.html.erb
+++ b/app/views/mypages/edit.html.erb
@@ -1,8 +1,8 @@
 <div class="container cute-title mx-auto px-4 py-8">
-  <div class="card bg-base-200 shadow-xl mb-8">
-    <div class="card-body">
-      <h2 class="card-title">プロフィールの編集</h2>
-      <%= form_with(model: current_user, url: mypage_path, method: :patch, local: true) do |form| %>
+  <%= form_with(model: current_user, url: mypage_path, method: :patch, local: true) do |form| %>
+    <div class="card bg-base-200 shadow-xl mb-8">
+      <div class="card-body">
+        <h2 class="card-title">プロフィールの編集</h2>
         <% if current_user.errors.any? %>
           <div class="alert alert-error">
             <ul>
@@ -26,12 +26,17 @@
           </label>
           <%= form.email_field :email, class: "input input-bordered", required: true %>
         </div>
+      </div>
+    </div>
 
-        <div class="card-actions justify-end mt-6">
-          <%= link_to "キャンセル", mypage_path, class: "btn btn-ghost" %>
-          <%= form.submit "更新する", class: "btn btn-primary" %>
-        </div>
+    <div class="flex justify-start mt-6 gap-2">
+      <%= link_to mypage_path, class: "nav-link" do %>
+        <img src="/images/return_before.png" alt="return" class="btn_effect h-17">
+      <% end %>
+
+      <%= form.button class: "nav-link" do %>
+        <%= image_tag "/images/update.png", alt: "update", class: "btn_effect h-17" %>
       <% end %>
     </div>
-  </div>
+  <% end %>
 </div>
