--- a/app/views/mypages/show.html.erb
+++ b/app/views/mypages/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container cute-title mx-auto px-4 py-8">
   <div class="card bg-base-200 shadow-xl mb-8">
     <div class="card-body">
-      <h2 class="card-title">プロフィール情報</h2>
+      <h2 class="cute-title">プロフィール情報</h2>
       <div class="py-2">
         <p class="text-sm text-gray-600">お名前</p>
         <p class="text-lg font-medium"><%= current_user.name %></p>
@@ -11,9 +11,9 @@
         <p class="text-lg font-medium"><%= current_user.email %></p>
       </div>
 
-      <div class="card-actions justify-end mt-4">
-        <%= link_to "プロフィール編集", edit_mypage_path, class: "btn btn-primary" %>
-      </div>
+      <%= link_to edit_mypage_path do %>
+        <%= image_tag "/images/user_edit.png", alt: "edit_mypage",class:"btn_effect h-17" %>
+      <% end %>
     </div>
   </div>
 
@@ -38,8 +38,17 @@
   <div class="mt-8">
     <h3 class="text-xl font-bold mb-4">アカウント設定</h3>
     <div class="flex flex-wrap gap-4">
-      <%= button_to "ログアウト", destroy_user_session_path, method: :delete, class: "btn btn-outline" %>
-      <%= button_to "アカウント削除", mypage_path, method: :delete, data: { turbo_confirm: "本当に削除しますか？保存されたデータは全て失われます。" }, class: "btn btn-outline btn-error" %>
+      <%= button_to destroy_user_session_path, method: :delete, class: "nav-link" do %>
+        <%= image_tag "/images/logout.png", alt: "logout", class: "btn_effect h-17" %>
+      <% end %>
+
+      <%= button_to mypage_path, method: :delete, data: { turbo_confirm: "本当に削除しますか？保存されたデータは全て失われます。" }, class: "nav-link" do %>
+        <%= image_tag "/images/delete_user.png", alt: "delete_user", class: "btn_effect h-17" %>
+      <% end %>
+
+      <%= link_to new_route_path, class: "nav-link ml-auto" do %>
+        <img src="/images/return_map.png" alt="return_map" class="btn_effect h-17">
+      <% end %>     
     </div>
   </div>
 </div>
