--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   </head>
 
-  <body data-csrf-token="<%= form_authenticity_token %>">
+  <body data-csrf-token="<%= form_authenticity_token %>" data-turbo="false">
     <% flash.each do |message_type, message| %>
       <div class="flash_message <%= message_type %>"><%= message %></div>
     <% end %>
