未ログインは操作を制限

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,23 +22,26 @@
         <%# <ul> → メニュー項目のリスト %>
         <%  1 # navbar-nav → ナビゲーション用のリストスタイル.横並びに整列 %>
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <%= link_to calendar_path, class: "nav-link" do %>
-              <img src="/images/calendar.png" alt="calendar" class="h-17">
-            <% end %>
-          </li>
-
-          <li class="nav-item">
-            <%= link_to save_routes_path, class: "nav-link" do %>
-              <img src="/images/saved_routes.png" alt="routes_logo" class="h-17">
-            <% end %>
-          </li>
-          
-          <li class="nav-item">
-            <%= link_to locations_path, class: "nav-link" do %>
-              <img src="/images/saved_locations.png" alt="locations_logo" class="h-17">
-            <% end %>
-          </li>
+          <%
+            menu_items = [
+              { path: calendar_path, image: "/images/calendar.png", alt: "calendar", message: "カレンダーの閲覧にはログインが必要です。" },
+              { path: save_routes_path, image: "/images/saved_routes.png", alt: "routes_logo", message: "保存したルートの閲覧にはログインが必要です。" },
+              { path: locations_path, image: "/images/saved_locations.png", alt: "locations_logo", message: "保存した場所の閲覧にはログインが必要です。" }
+            ]
+          %>
+          <% menu_items.each do |item| %>
+            <li class="nav-item">
+              <% if user_signed_in? %>
+                <%= link_to item[:path], class: "nav-link" do %>
+                  <%= image_tag item[:image], alt: item[:alt], class: "h-17" %>
+                <% end %>
+              <% else %>
+                <%= button_tag type: 'button', class: "nav-link bg-transparent border-0", onclick: "alert('#{item[:message]}')" do %>
+                  <%= image_tag item[:image], alt: item[:alt], class: "btn_effect h-17 opacity-50" %>
+                <% end %>
+              <% end %>
+            </li>
+          <% end %>
 
           <li class="nav-item">
             <%= link_to root_path, class: "nav-link" do %>
