スクリプトの重複読み込み防止

--- a/app/views/mypages/show.html.erb
+++ b/app/views/mypages/show.html.erb
@@ -40,12 +40,12 @@
     <div class="flex flex-wrap gap-4">
       <%= button_to destroy_user_session_path,
         method: :delete,
-        form: { data: { turbo_confirm: "ログアウトしますか？" } },
+        form: { data: { turbo: true, turbo_confirm: "ログアウトしますか？" } },
         class: "nav-link" do %>
         <%= image_tag "/images/logout.png", alt: "logout", class: "btn_effect h-17" %>
       <% end %>
 
-      <%= button_to mypage_path, method: :delete, form: { data: { turbo_confirm: "本当に削除しますか？保存されたデータは全て失われます。" } }, class: "nav-link" do %>
+      <%= button_to mypage_path, method: :delete, form: { data: { turbo: true, turbo_confirm: "本当に削除しますか？保存されたデータは全て失われます。" } }, class: "nav-link" do %>
         <%= image_tag "/images/delete_user.png", alt: "delete_user", class: "btn_effect h-17" %>
       <% end %>
 
