--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <%# class に指定されているクラスは Bootstrap のスタイルを適用するためのもの %>
 <%# navbar → ナビゲーションバー用の基本クラス %>
 <%# navbar-expand-lg → 画面幅が「large（992px）以上」のとき横に展開、それ以下は折りたたむ %>
-<% menu_should_be_visible = [walk_routes_path, car_routes_path, locations_path].include?(request.path) %>
+<% menu_should_be_visible = [walk_routes_path, car_routes_path].include?(request.path) %>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <%# container-fluid は、左右に余白がなく画面いっぱいに広がるコンテナ %>
@@ -33,11 +33,11 @@
             <li class="nav-item">
               <% if user_signed_in? %>
                 <%= link_to item[:path], class: "nav-link" do %>
-                  <%= image_tag item[:image], alt: item[:alt], class: "h-17" %>
+                  <%= image_tag item[:image], alt: item[:alt], class: "h-15" %>
                 <% end %>
               <% else %>
                 <%= button_tag type: 'button', class: "nav-link bg-transparent border-0", onclick: "alert('#{item[:message]}')" do %>
-                  <%= image_tag item[:image], alt: item[:alt], class: "btn_effect h-17 opacity-50" %>
+                  <%= image_tag item[:image], alt: item[:alt], class: "btn_effect h-15 opacity-50" %>
                 <% end %>
               <% end %>
             </li>
@@ -45,7 +45,7 @@
 
           <li class="nav-item">
             <%= link_to root_path, class: "nav-link" do %>
-              <%= image_tag "/images/top.png", alt: "load_top" %>
+              <%= image_tag "/images/top.png", alt: "load_top", class: "h-15" %>
             <% end %>
           </li>
         </ul>
