--- a/app/views/save_routes/show.html.erb
+++ b/app/views/save_routes/show.html.erb
@@ -83,7 +83,10 @@
       <%= image_tag "/images/edit.png", alt: "edit",class:"btn_effect h-17" %>
     <% end %>
     
-    <%= button_to @save_route, method: :delete, form: { data: { turbo_confirm: '本当に削除しますか？', "barba-prevent": "all" } }, class: "nav-link" do %>
+    <%= button_to @save_route,
+      method: :delete,
+      form: { data: { turbo: true, turbo_confirm: '本当に削除しますか？' } },
+      class: "nav-link" do %>
       <%= image_tag "/images/delete.png", alt: "destroy", class: "btn_effect h-17" %>
     <% end %>
  
@@ -100,7 +103,10 @@
     <% end %>
 
     <% if @save_route.execution_date.present? && @save_route.start_time.present? %>
-      <%= button_to save_route_notifications_path(@save_route), method: :post, form: { data: { turbo_confirm: "出発5分前にメールで通知を設定します。よろしいですか？" } }, class: "nav-link" do %>
+      <%= button_to save_route_notifications_path(@save_route),
+        method: :post,
+        form: { data: { turbo: true, turbo_confirm: "出発5分前にメールで通知を設定します。よろしいですか？" } },
+        class: "nav-link" do %>
         <%= image_tag "/images/mail_notification.png", alt: "mail", class: "btn_effect h-17" %>
       <% end %>
     <% else %>
