--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -40,5 +40,8 @@
         </div>
       </div>
     <% end %>
+    <%= link_to new_user_session_path, class: "nav-link" do %>
+      <img src="/images/return_before.png" alt="return" class="btn_effect h-17">
+    <% end %>
   </div>
 </div>
