--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -8,9 +8,10 @@
   <div id="splide" class="splide w-full max-w-md -mt-10">
     <div class="splide__track">
       <ul class="splide__list">
-        <li class="splide__slide"><%= image_tag "intro_page1.png" %></li>
-        <li class="splide__slide"><%= image_tag "intro_page2.png" %></li>
-        <li class="splide__slide"><%= image_tag "intro_page3.png" %></li>
+        <li class="splide__slide"><%= image_tag "slide_1.png" %></li>
+        <li class="splide__slide"><%= image_tag "slide_2.png" %></li>
+        <li class="splide__slide"><%= image_tag "slide_3.png" %></li>
+        <li class="splide__slide"><%= image_tag "slide_4.png" %></li>
       </ul>
     </div>
   </div>
