--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -26,4 +26,12 @@
       <% end %>
     <% end %>
   </div>
+
+  <footer class="w-full py-4 text-center text-gray-500 text-xs mb-2">
+    <div class="space-x-4 mb-1">
+      <%= link_to "利用規約", "https://electric-earth-c5c.notion.site/ebd//728a8a7ee704430f8e84bdaa1e40d614", target: "_blank", rel: "noopener noreferrer", class: "hover:underline" %>
+      <%= link_to "プライバシーポリシー", "https://electric-earth-c5c.notion.site/ebd//2d2b86f6673480a28b01d4098c776bfa", target: "_blank", rel: "noopener noreferrer", class: "hover:underline" %>
+    </div>
+    <div>&copy; <%= Time.current.year %> Sketto</div>
+  </footer>
 </div>
