パスワード再設定の修正

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -4,7 +4,6 @@
   下記URLから新しいパスワードの設定を行なってください。
 </div>
 
-<p><%= link_to 'パスワードの変更はこちら', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to 'パスワードの変更はこちら', edit_user_password_url(reset_password_token: @token) %></p>
   
 <p>また、こちらのメールに心当たりがない場合はパスワード変更不要です。</p>
-
