--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,11 +1,11 @@
 <!-- 	justify-* → 並びの向き（メイン軸）で揃える,items-* → 並びの直交方向（交差軸）で揃える -->
 <div class="flex flex-col items-center justify-between min-h-screen">
-  <h1 class="mt-5">
+  <h1 class="mt-3">
     <%# ロゴのサイズをTailwind CSSで直接指定します %>
     <%= image_tag "/images/logo.png", alt: "Sketto", class: "w-64 md:w-80" %>
   </h1>
 
-  <div id="splide" class="splide w-full max-w-md -mt-10">
+  <div id="splide" class="splide w-full max-w-md -mt-6">
     <div class="splide__track">
       <ul class="splide__list">
         <li class="splide__slide"><%= image_tag "slide_1.png" %></li>
@@ -27,7 +27,7 @@
     <% end %>
   </div>
 
-  <footer class="w-full py-4 text-center text-gray-500 text-xs mb-2">
+  <footer class="w-full text-center text-gray-500 text-xs mb-2">
     <div class="space-x-4 mb-1">
       <%= link_to "利用規約", "https://electric-earth-c5c.notion.site/ebd//728a8a7ee704430f8e84bdaa1e40d614", target: "_blank", rel: "noopener noreferrer", class: "hover:underline" %>
       <%= link_to "プライバシーポリシー", "https://electric-earth-c5c.notion.site/ebd//2d2b86f6673480a28b01d4098c776bfa", target: "_blank", rel: "noopener noreferrer", class: "hover:underline" %>
