--- a/app/views/shared/_route_points.html.erb
+++ b/app/views/shared/_route_points.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="flex flex-col gap-1">
-    <button id="startPoint" class="btn_effect px-4 py-2 bg-white border-none rounded-md shadow-md font-bold text-gray-500">出発地</button>
+    <button id="startPoint" onclick="alert('検索、または地図上から出発点を選択してください。')" class="btn_effect px-4 py-2 bg-white border-none rounded-md shadow-md font-bold text-gray-500">出発地</button>
     <div class="flex items-center gap-1">
       <select id="startHour" class="select select-bordered select-sm w-20 bg-white border-none rounded-md shadow-md text-gray-500">
         <option disabled selected>時</option>
@@ -67,7 +67,7 @@
 
   <%= image_tag "/images/arrow.png", alt: "arrow", class: "mb-1 h-5 w-auto" %>
   <div class="flex flex-col gap-1">
-    <button id="destinationPoint" class="btn_effect px-4 py-2 bg-white border-none rounded-md shadow-md font-bold text-gray-500">目的地</button>
+    <button id="destinationPoint" onclick="alert('検索、または地図上から目的地を選択してください。')" class="btn_effect px-4 py-2 bg-white border-none rounded-md shadow-md font-bold text-gray-500">目的地</button>
     <div class="flex items-center gap-2">
       <div class="flex flex-items gap-1">
         <select id="destinationHour" class="select select-bordered select-sm w-20 bg-white border-none rounded-md shadow-md text-gray-500">
