--- a/app/views/shared/_route_points.html.erb
+++ b/app/views/shared/_route_points.html.erb
@@ -1,5 +1,5 @@
 
-<div class="point-selector flex flex-wrap items-center justify-center gap-2 w-full">
+<div class="point-selector flex flex-wrap items-center justify-center w-full">
   <%# 'mode'ローカル変数に応じて表示を切り替える %>
   <% if defined?(mode) && mode == :walk %>
     <%= link_to car_routes_path do %>
@@ -11,7 +11,7 @@
     <% end %>
   <% end %>
 
-  <div class="flex flex-col gap-1">
+  <div class="flex flex-col gap-1 -mt-5">
     <button id="startPoint" onclick="alert('検索、または地図上から出発点を選択してください。')" class="btn_effect px-4 py-2 bg-white border-none rounded-md shadow-md font-bold text-gray-500">出発地</button>
     <div class="flex items-center gap-1">
       <select id="startHour" class="select select-bordered select-sm w-20 bg-white border-none rounded-md shadow-md text-gray-500">
