中継点修正

--- a/app/views/shared/_route_points.html.erb
+++ b/app/views/shared/_route_points.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="flex flex-col gap-1 -mt-5">
-    <button id="startPoint" onclick="alert('検索、または地図上から出発点を選択してください。')" class="btn_effect px-4 py-2 bg-white border-none rounded-md shadow-md font-bold text-gray-500">出発地</button>
+    <button id="startPoint" onclick="alert('検索、または地図上から出発点を選択してください。')" class="btn_effect px-4 py-2 bg-white border-none rounded-md shadow-md font-bold text-gray-500">現在地</button>
     <div class="flex items-center gap-1">
       <select id="startHour" class="select select-bordered select-sm w-20 bg-white border-none rounded-md shadow-md text-gray-500">
         <option disabled selected>時</option>
@@ -38,30 +38,31 @@
     <div class="relay-point-item flex flex-col items-center justify-center gap-2">
       <%= image_tag "/images/arrow.png", alt: "arrow", class: "h-5 w-auto" %>
       <button class="relay-point-name btn_effect px-4 py-2 bg-white border-none rounded-md shadow-md font-bold text-gray-500">中継地</button>
-      <div class="flex items-center gap-1">
-        <div class="flex items-center gap-1">
-          <div class="flex flex-col gap-1">
-            <span class="relay-arrival-time"></span>
-          </div>
-          <div class="flex flex-items gap-1">
-            <span class="font-bold text-[#624007]">滞在時間</span>
+      <div class="flex flex-items gap-1">
+        <span class="relay-arrival-time"></span>
+        <div class="flex flex-col gap-1>
+          <span class="font-bold text-[#624007]">滞在時間</span>
+          <div class="flex items-center">
             <select id="stayHour_${index}" class="stay-hour-select select select-bordered select-sm w-20 bg-white border-none rounded-md shadow-md text-gray-500"
                     data-options="<%= options_for_select((0..23).map { |h| format('%02d', h) }).to_json %>"></select>
             <select id="stayMinute_${index}" class="stay-minute-select select select-bordered select-sm w-20 bg-white border-none rounded-md shadow-md text-gray-500"
                     data-options="<%= options_for_select((0..59).map { |m| format('%02d', m) }).to_json %>"></select>
-            <span class="font-bold text-[#624007]">中継点(着)</span>
-          </div>
+            <span class="font-bold text-[#624007]">中継点<br>(着)</span>
+          </div> 
+        </div>
+
+        <div class="flex flex-col gap-1">
+          <button class="remove-relay-point-btn text-red-500 text-xl btn_effect bg-white border-none rounded-md shadow-md font-bold w-6 h-6 flex items-center justify-center p-0">×</button>
           <div class="flex flex-col gap-1">
-            <button class="remove-relay-point-btn text-red-500 text-xl btn_effect bg-white border-none rounded-md shadow-md font-bold w-6 h-6 flex items-center justify-center p-0">×</button>
             <% if local_assigns.fetch(:mode, nil) == :car %>
               <button class="search-nearby-parking-btn appearance-none bg-transparent border-none" data-point-type="relay">
                 <%= image_tag "/images/search_parking.png", alt: "search_parking", class: "btn_effect mt-2 h-13 w-13" %>
               </button>
             <% end %>
+            <div class="parking-info text-xs text-gray-600"></div>
           </div>
         </div>
       </div>
-      <div class="parking-info text-xs text-gray-600"></div>
     </div>
   </template>
 
