--- a/app/views/shared/_route_points.html.erb
+++ b/app/views/shared/_route_points.html.erb
@@ -56,7 +56,7 @@
           <div class="flex flex-col gap-1">
             <% if local_assigns.fetch(:mode, nil) == :car %>
               <button class="search-nearby-parking-btn appearance-none bg-transparent border-none" data-point-type="relay">
-                <%= image_tag "/images/search_parking.png", alt: "search_parking", class: "btn_effect mt-2 h-13 w-13" %>
+                <%= image_tag "/images/search_parking.png", alt: "search_parking", class: "btn_effect h-13 w-13" %>
               </button>
             <% end %>
             <div class="parking-info text-xs text-gray-600"></div>
