--- a/app/views/shared/_route_points.html.erb
+++ b/app/views/shared/_route_points.html.erb
@@ -40,7 +40,7 @@
       <button class="relay-point-name btn_effect px-4 py-2 bg-white border-none rounded-md shadow-md font-bold text-gray-500">中継地</button>
       <div class="flex flex-items gap-1">
         <span class="relay-arrival-time"></span>
-        <div class="flex flex-col gap-1>
+        <div class="flex flex-col>
           <span class="font-bold text-[#624007]">滞在時間</span>
           <div class="flex items-center">
             <select id="stayHour_${index}" class="stay-hour-select select select-bordered select-sm w-20 bg-white border-none rounded-md shadow-md text-gray-500"
