--- a/app/views/shared/_route_points.html.erb
+++ b/app/views/shared/_route_points.html.erb
@@ -38,11 +38,11 @@
     <div class="relay-point-item flex flex-col items-center justify-center gap-2">
       <%= image_tag "/images/arrow.png", alt: "arrow", class: "h-5 w-auto" %>
       <button class="relay-point-name btn_effect px-4 py-2 bg-white border-none rounded-md shadow-md font-bold text-gray-500">中継地</button>
-      <div class="flex flex-items gap-1">
+      <div class="flex items-center gap-1">
         <span class="relay-arrival-time"></span>
-        <div class="flex flex-col>
+        <div class="flex flex-col gap-1">
           <span class="font-bold text-[#624007]">滞在時間</span>
-          <div class="flex items-center">
+          <div class="flex items-center -mt-1">
             <select id="stayHour_${index}" class="stay-hour-select select select-bordered select-sm w-20 bg-white border-none rounded-md shadow-md text-gray-500"
                     data-options="<%= options_for_select((0..23).map { |h| format('%02d', h) }).to_json %>"></select>
             <select id="stayMinute_${index}" class="stay-minute-select select select-bordered select-sm w-20 bg-white border-none rounded-md shadow-md text-gray-500"
