中継点時刻表示の修正

--- a/app/views/shared/_route_points.html.erb
+++ b/app/views/shared/_route_points.html.erb
@@ -39,7 +39,9 @@
       <%= image_tag "/images/arrow.png", alt: "arrow", class: "h-5 w-auto" %>
       <button class="relay-point-name btn_effect px-4 py-2 bg-white border-none rounded-md shadow-md font-bold text-gray-500">中継地</button>
       <div class="flex items-center gap-1">
-        <span class="relay-arrival-time"></span>
+        <div class="flex flex-col">
+          <span class="relay-arrival-time"></span>
+        </div>
         <div class="flex flex-col gap-1">
           <span class="font-bold text-[#624007]">滞在時間</span>
           <div class="flex items-center -mt-1">
