--- a/app/views/shared/_route_points.html.erb
+++ b/app/views/shared/_route_points.html.erb
@@ -70,9 +70,9 @@
 
   <%= image_tag "/images/arrow.png", alt: "arrow", class: "h-5 -mt-4 w-auto" %>
   <div class="flex flex-col">
-    <button id="destinationPoint" onclick="alert('検索、または地図上から目的地を選択してください。')" class="btn_effect px-4 py-2 mb-1 -mt-2 bg-white border-none rounded-md shadow-md font-bold text-gray-500">目的地</button>
+    <button id="destinationPoint" onclick="alert('検索、または地図上から目的地を選択してください。')" class="self-center btn_effect px-4 py-2 mb-1 -mt-2 bg-white border-none rounded-md shadow-md font-bold text-gray-500">目的地</button>
     <div class="flex items-center gap-1">
-      <div class="flex flex-items gap-1">
+      <div class="flex items-center gap-1">
         <select id="destinationHour" class="select select-bordered select-sm gap-2 w-20 bg-white border-none rounded-md shadow-md text-gray-500">
           <option disabled selected>時</option>
           <% (0..23).each do |h| %>
