--- a/app/views/shared/_route_points.html.erb
+++ b/app/views/shared/_route_points.html.erb
@@ -72,7 +72,7 @@
   <div class="flex flex-col">
     <button id="destinationPoint" onclick="alert('検索、または地図上から目的地を選択してください。')" class="self-center btn_effect px-4 py-2 -mt-2 bg-white border-none rounded-md shadow-md font-bold text-gray-500">目的地</button>
     <div class="flex items-center gap-1">
-      <div class="flex items-center gap-1 -mt-7">
+      <div class="flex items-center gap-1">
         <select id="destinationHour" class="select select-bordered select-sm w-20 bg-white border-none rounded-md shadow-md text-gray-500">
           <option disabled selected>時</option>
           <% (0..23).each do |h| %>
