--- a/app/views/save_routes/show.html.erb
+++ b/app/views/save_routes/show.html.erb
@@ -67,6 +67,7 @@
 
         <% if @notify_at.present? %>
           <p><strong>通知日時:</strong> <%= @notify_at.strftime('%Y年%m月%d日 %H:%M') %></p>
+          <p><strong>通知先メールアドレス:</strong> <%= current_user.email %></p>
         <% end %>
       </div>
     </div>
