--- a/app/views/save_routes/show.html.erb
+++ b/app/views/save_routes/show.html.erb
@@ -8,20 +8,15 @@
       <div class="space-y-2">
 
         <% if @save_route.execution_date.present? %>
-          <p><strong>実行日:</strong> <%= @save_route.execution_date.strftime('%Y年%m月%d日') %></p>
+          <p><strong>実行日:</strong> <%= @save_route.formatted_execution_date %></p>
         <% end %>
 
         <% if @save_route.travel_mode.present? %>
-          <p><strong>移動手段:</strong>
-            <%= case @save_route.travel_mode
-                when 'driving' then '車'
-                when 'walking' then '徒歩'
-                end %>
-          </p>
+          <p><strong>移動手段:</strong> <%= @save_route.travel_mode_ja %></p>
         <% end %>
 
         <% if @save_route.start_time.present? %>
-          <p><strong>出発時刻:</strong> <%= @save_route.start_time.strftime('%H:%M') %></p>
+          <p><strong>出発時刻:</strong> <%= @save_route.formatted_start_time %></p>
         <% end %>
 
         <p><strong>出発点:</strong> <%= @save_route.start_point['name'] %></p>
@@ -58,11 +53,11 @@
         </p>
 
         <% if @save_route.total_distance.present? %>
-          <p><strong>総移動距離:</strong> <%= (@save_route.total_distance / 1000.0).round(2) %> km</p>
+          <p><strong>総移動距離:</strong> <%= @save_route.total_distance_km %> km</p>
         <% end %>
 
         <% if @save_route.total_duration.present? %>
-          <p><strong>所要時間:</strong> <%= (@save_route.total_duration / 60.0).ceil %> 分</p>
+          <p><strong>所要時間:</strong> <%= @save_route.total_duration_minutes %> 分</p>
         <% end %>
 
         <% if @notify_at.present? %>
