--- a/app/views/save_routes/show.html.erb
+++ b/app/views/save_routes/show.html.erb
@@ -1,3 +1,6 @@
+<%# JSONデータは複数回使用するため、変数に格納して再利用（パフォーマンス改善） %>
+<% route_json = @save_route.to_json(only: [:travel_mode, :start_point, :end_point, :waypoints]) %>
+
 <div class="container cute-title mx-auto px-4 py-8">
   <div class="flex justify-between items-center md-6">
     <h1 class="text-2xl font-bold"><%= @save_route.name %>の詳細</h1>
@@ -73,7 +76,7 @@
     </div>
   </div>
   <div id="route-data"
-       data-route="<%= @save_route.to_json(only: [:travel_mode, :start_point, :end_point, :waypoints]) %>"
+       data-route="<%= route_json %>"
        style="display: none;">
   </div>
   <div id="map"></div>
@@ -98,7 +101,7 @@
       id: 'start-navigation-from-saved-route',
       class: 'nav-link',
       data: {
-        route: @save_route.to_json(only: [:travel_mode, :start_point, :end_point, :waypoints]),
+        route: route_json,
         car_navi_path: car_navigation_routes_path,
         walk_navi_path: walk_navigation_routes_path
       }
