検索結果のコンテナ消える問題解決✨

--- a/app/views/shared/_route_information.html.erb
+++ b/app/views/shared/_route_information.html.erb
@@ -1,4 +1,4 @@
-<div id="resultContainer"></div>
+<div id="routeContainer"></div>
 
 <template id="route-info-template">
   <div class="route-info-content cute-title" style="padding: 10px;">
