ボタン同士の重なりを修正🕹️

--- a/app/views/shared/_route_menu.html.erb
+++ b/app/views/shared/_route_menu.html.erb
@@ -2,7 +2,7 @@
 <div class="flex flex-wrap justify-center w-full">
   <!-- flex: 子要素が横並びになる、items-center: 上下中央寄せ、justify-between: 最初の要素は左端、最後の要素は右端に寄せられる -->
 
-  <div class="flex items-center">
+  <div class="flex items-center gap-2">
     <button id="<%= mode == :car ? 'carDrawRoute' : 'walkDrawRoute' %>" class="appearance-none bg-transparent border-none p-0 m-0 mr-[-1rem]">
       <%= image_tag "/images/search_route.png", alt: "search_route", class: "btn_effect h-17 -mt-1" %>
     </button>
