--- a/app/views/shared/_route_information.html.erb
+++ b/app/views/shared/_route_information.html.erb
@@ -13,7 +13,7 @@
         <span class="route-total-duration" style="font-size: 1.2em; font-weight: bold;"></span>
       </div>
       <div>
-        <span style="font-size: 0.9em; color: #666;">推定消費カロリー</span><br>
+        <span style="font-size: 0.7em; color: #666;">推定消費カロリー(体重50kg想定)</span><br>
         <span class="calorie-burned" style="font-size: 1.2em; font-weight: bold;"></span>
     </div>
   </div>
