--- a/app/views/shared/_route_information.html.erb
+++ b/app/views/shared/_route_information.html.erb
@@ -17,7 +17,8 @@
           <span style="font-size: 0.7em; color: #666;">推定消費カロリー(体重50kg想定)</span><br>
           <span class="calorie-burned" style="font-size: 1.2em; font-weight: bold;"></span>
         <% else %>
-          <span style="font-size: 0.7em; color: #666;">推定ガソリン消費量(燃費15km/L想定)</span><br>
+          <span style="font-size: 0.7em; color: #666;">推定ガソリン消費量</span><br>
+          <span style="font-size: 0.7em; color: #666;">(燃費15km/L想定)</span><br>
           <span class="gas-consumption" style="font-size: 1.2em; font-weight: bold;"></span>
         <% end %>
     </div>
